# cli-games

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  cli.py  engine.py  even.py  greet.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_game.py  brain_gcd.py  brain_prime.py  brain_progression.py
