[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "App consists of six CLI games."
authors = ["Andrey <volk000@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = "https://github.com/Andrey-Volkovitskiy/python-project-49"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Topic :: Games/Entertainment :: Puzzle Games"
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
